--- a/NETSDL2Test/NETSDL2Test.csproj
+++ b/NETSDL2Test/NETSDL2Test.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NETSDL2\NETSDL2.vcxproj" />
+    <ProjectReference Include="..\NETSDL2_Ext\NETSDL2_Ext.csproj" />
     <ProjectReference Include="..\NETSDL2_Image\NETSDL2_Image.vcxproj" />
     <ProjectReference Include="..\NETSDL2_mixer\NETSDL2_mixer.vcxproj" />
     <ProjectReference Include="..\NETSDL2_Net\NETSDL2_Net.vcxproj" />
